# DynamicQueriesCC

./: .gitignore  CMakeLists.txt  README.md  tags
.github/workflows/: cmake.yml
include/: binary_graph_stream.h  euler_tour_tree.h  graph_tiers.h  link_cut_tree.h  mpi_functions.h  mpi_nodes.h  sketch.h  sketch_backup.h  sketchless_euler_tour_tree.h  sketchless_skiplist.h  skiplist.h  splay_tree.h  timer.h  util.h
results/: mpi_query_results.txt  mpi_update_results.txt
results/mpi_space_results/: dnc_stream_binary_mem.txt  dnc_stream_binary_no_reduced_height_mem.txt  dnc_streamified_binary_mem.txt  dnc_streamified_binary_no_reduced_height_mem.txt  enron_stream_binary_mem.txt  enron_stream_binary_no_reduced_height_mem.txt  enron_streamified_binary_mem.txt  enron_streamified_binary_no_reduced_height_mem.txt  kron_13_stream_binary_mem.txt  kron_13_stream_binary_no_reduced_height_mem.txt  kron_15_stream_binary_mem.txt  kron_15_stream_binary_no_reduced_height_mem.txt  kron_16_stream_binary_mem.txt  kron_16_stream_binary_no_reduced_height_mem.txt  kron_17_stream_binary_mem.txt  kron_17_stream_binary_no_reduced_height_mem.txt  kron_18_stream_binary_mem.txt  kron_18_stream_binary_no_reduced_height_mem.txt  tech_stream_binary_mem.txt  tech_stream_binary_no_reduced_height_mem.txt  tech_streamified_binary_mem.txt  tech_streamified_binary_no_reduced_height_mem.txt
scripts/: batch_size_experiment.sh  density_sweep_experiment.sh  export_results.sh  full_test_experiment.sh  mpi_correct_test  mpi_correct_test.sh  mpi_query_test  mpi_query_test.sh  mpi_space_test.sh  mpi_update_test  mpi_update_test.sh  sketch_buffer_experiment.sh  sketch_buffer_space.sh
src/: euler_tour_tree.cpp  graph_tiers.cpp  input_node.cpp  link_cut_tree.cpp  query_node.cpp  sketch.cpp  sketch_backup.cpp  sketchless_euler_tour_tree.cpp  sketchless_skiplist.cpp  skiplist.cpp  skiplist_allocator.cpp  splay_tree.cpp  tier.cpp  tier_node.cpp
test/: basic_test.cpp  ett_test.cpp  euler_tour_tree_test.cpp  graph_tiers_test.cpp  link_cut_tree_test.cpp  mpi_graph_tiers_test.cpp  mpi_test_runner.cpp  skiplist_test.cpp  splay_test.cpp  splay_tree_test.cpp  test_runner.cpp
tools/: stream_generator.cpp
